# wonnx-ios

./: LICENSE-APACH  LICENSE-MIT  README.md
WONNX-iOS/WONNX-iOS/: ContentView.swift  WONNXMobile-Bridge-Header.h  WONNX_iOSApp.swift  c_interface.h
WONNX-iOS/WONNX-iOS.xcodeproj/: project.pbxproj
WONNX-iOS/WONNX-iOS.xcodeproj/project.xcworkspace/xcuserdata/kikemori.xcuserdatad/: UserInterfaceState.xcuserstate
WONNX-iOS/WONNX-iOS.xcodeproj/xcuserdata/kikemori.xcuserdatad/xcschemes/: xcschememanagement.plist
WONNX-iOS/WONNX-iOS/Extentions/: CGSize.swift  CVPixelBuffer.swift  Data.swift
WONNX-iOS/WONNX-iOS/Views/Common/: ViewController.swift
WONNX-iOS/WONNX-iOS/Views/Yolox/: YoloxView.swift  YoloxViewController.swift
WONNX-iOS/WONNX-iOS/WONNXSwift/: Interpreter.swift
wonnx-mobile/: Cargo.toml  build.sh
wonnx-mobile/examples/: yolox_nano.rs
wonnx-mobile/src/: c_interface.h  c_interface.rs  interpreter.rs  lib.rs
