[package]
name = "wonnx-mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "WONNXMobile"
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wonnx = { git = "https://github.com/kadu-v/wonnx", branch = "dev/slice" }
futures = "*"
once_cell = "*"

