[package]
name = "wonnx-mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "wonnx_mobile"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wonnx = { git = "https://github.com/kadu-v/wonnx", branch = "dev/slice" }
wonnx = { path = "../../wonnx/wonnx" }
futures = "*"
once_cell = "*"


[dev-dependencies]
image = "0.25.1"
imageproc = "0.24.0"
env_logger = "0.10.0"
pollster = "0.3.0"
log = "0.4.17"
ab_glyph = "0.2.23"
